-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.8, Lustre 2.12.6
-
None
-
3
-
9223372036854775807
One of our user groups was setting lfs setstripe -c "$STRIPE_COUNT" in a script and not checking the variable existed. Therefore at some point they managed to run the equivalent of
lfs setstripe -c ""
Testcase (Client: cray-lustre-default-2.7.5.13_4.4.180-6.0.7.1_16.13__gddebdf5c6.x86_64, Server: 2.10.8)
whi550@galaxy-1 [2021-02-04 13:26] /askapbuffer/payne/whi550/testing> mkdir lfs_testing whi550@galaxy-1 [2021-02-04 13:26] /askapbuffer/payne/whi550/testing> cd lfs_testing whi550@galaxy-1 [2021-02-04 13:26] /askapbuffer/payne/whi550/testing/lfs_testing> lfs getstripe . . stripe_count: 1 stripe_size: 1048576 stripe_offset: -1 pool: processing whi550@galaxy-1 [2021-02-04 13:26] /askapbuffer/payne/whi550/testing/lfs_testing> lfs setstripe -c "" . whi550@galaxy-1 [2021-02-04 13:26] /askapbuffer/payne/whi550/testing/lfs_testing> lfs getstripe . . stripe_count: 1 stripe_size: 1048576 stripe_offset: -1
testcase on 2.12. (lustre-client-2.12.5-1.x86_64, server lustre-2.12.6-1.el7.x86_64)
set up pools on server:
[root@pgfs-mds4 ~]# mount /dev/mapper/TEST_MGT [root@pgfs-mds4 ~]# mount /dev/mapper/TEST_OST0000 [root@pgfs-mds4 ~]# mount /dev/mapper/TEST_OST0001 [root@pgfs-mds4 ~]# mount /dev/mapper/TEST_MDT0000 [root@pgfs-mds4 ~]# lctl pool_list testfs Pools from testfs: [root@pgfs-mds4 ~]# lctl pool_new testfs.ost0 Pool testfs.ost0 created [root@pgfs-mds4 ~]# lctl pool_new testfs.ost1 Pool testfs.ost1 created [root@pgfs-mds4 ~]# lctl pool_add testfs.ost0 testfs-OST0000 OST testfs-OST0000_UUID added to pool testfs.ost0 [root@pgfs-mds4 ~]# lctl pool_add testfs.ost1 testfs-OST0001 OST testfs-OST0001_UUID added to pool testfs.ost1 [root@pgfs-mds4 ~]# rpm -q lustre lustre-2.12.6-1.el7.x86_64
and the client:
aelwell@hpc-admin2:/testfs/pawsey0001/aelwell/dir1$ lfs getstripe . . stripe_count: 1 stripe_size: 1048576 pattern: raid0 stripe_offset: -1 pool: ost0 aelwell@hpc-admin2:/testfs/pawsey0001/aelwell/dir1$ lfs setstripe -c "" . aelwell@hpc-admin2:/testfs/pawsey0001/aelwell/dir1$ lfs getstripe . . stripe_count: 1 stripe_size: 1048576 pattern: 0 stripe_offset: -1 aelwell@hpc-admin2:/testfs/pawsey0001/aelwell/dir1$